# -Fractal_Swarm

./: .antigravityrules  .gitignore  .swarm_workspace  CONTRIBUTING.md  README.md  setup_global_swarm.ps1
.github/workflows/: fractal_heal.yml
core/brain/: guard_stress_test.py  swarm_boundary_guard.py
core/crypto/: crypto_utils.py
core/namespace/: workspace_id.py
core/oracle/vibe_backend/: ingest.py  main.py  pyproject.toml  search_wrapper.py
dashboard/: package-lock.json  tsconfig.app.json  tsconfig.node.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: MemoryLog.tsx  NightcrawlerStatus.tsx  ResearchTerminal.tsx  SecurityAuditFeed.tsx
docs/protocol/: .antigravityrules
pipelines/sandboxes/: oracle_pure.py  swarm_full_stress_v2.py  swarm_system_stress_test.py
pipelines/sandboxes/chaos_test/: main.py  processor.py  pyproject.toml  storage.py  test_main.py
pipelines/sandboxes/v2_test/: data_fetcher.py  implement_code_summary.md  main.py  pyproject.toml  test_main.py
server/: auto_browse_agent.py  main.py  nightcrawler.py  nightcrawler_state.json  search_wrapper.py
server/mybrain_data/: chroma.sqlite3
tools/ci/: auto_heal.py
tools/orchestrator/: nightcrawler.py  swarm_init.py
tools/query/: broker.py  ingest_agent_brain.py  main.py  pyproject.toml  query_brain.py
