[project]
name = "knowledge-broker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "fastapi>=0.133.1",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]
